add initial files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
  
         <nav>
-            <a class="logo" href="/index.html">Web<shan class="studio">Studio</shan>
+            <a class="logo" href="/index.html">Web<span class="studio">Studio</span>
             </a>
             <ul class="nav">
                 <li><a href="">Studio</a></li>
@@ -115,32 +115,32 @@
             <h2 class="port-title">Our Portfolio</h2>
             <ul class="port-list">
                 <li class="port-item">
-                    <img class="port-img" src="./images/img1(1).jpg" width="360px" alt="banking app" />
+                    <img class="port-img" src="./images/img1(1).jpg" width="360" alt="banking app" />
                     <h3 class="port-subtitle">Banking App</h3>
                     <p class="port-text">App</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img2(1).jpg" width="360px" alt="marketing" />
+                    <img class="port-img" src="./images/img2(1).jpg" width="360" alt="marketing" />
                     <h3 class="port-subtitle">Cashless Payment</h3>
                     <p class="port-text">Marketing</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img3(1).jpg" width="360px" alt="app" />
+                    <img class="port-img" src="./images/img3(1).jpg" width="360" alt="app" />
                     <h3 class="port-subtitle">Meditation App</h3>
                     <p class="port-text">App</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img4(1).jpg" width="360px" alt="taxi" />
+                    <img class="port-img" src="./images/img4(1).jpg" width="360" alt="taxi" />
                     <h3 class="port-subtitle">Taxi Service</h3>
                     <p class="port-text">Marketing</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img5(1).jpg" width="360px" alt=" illustrations" />
+                    <img class="port-img" src="./images/img5(1).jpg" width="360" alt=" illustrations" />
                     <h3 class="port-subtitle">Screen Illustrations</h3>
                     <p class="port-text">Design</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img6(1).jpg" width="360px" alt="joy" />
+                    <img class="port-img" src="./images/img6(1).jpg" width="360" alt="joy" />
                     <h3 class="port-subtitle">Online Courses</h3>
                     <p class="port-text">Marketing</p>
                 </li>
