add initial files

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <a class="logo" href="/index.html">Web<span class="studio">Studio</span>
             </a>
             <ul class="nav">
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="nav-item" href="/index.html">Studio</a></li>
+                <li><a class="nav-item" href="/index.html">Portfolio</a></li>
+                <li><a class="nav-item" href="/index.html">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul class="address">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="address">
+            <ul class="addr-list">
+                <li><a class="addr-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="addr-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -39,8 +39,8 @@
     <main>
         <!-- title -->
         <section class="title">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <h1 class="title-text">Effective Solutions for Your Business</h1>
+            <button class="title-btn" type="button">Order Service</button>
         </section>
 
         <!-- advantages -->
@@ -115,32 +115,32 @@
             <h2 class="port-title">Our Portfolio</h2>
             <ul class="port-list">
                 <li class="port-item">
-                    <img class="port-img" src="./images/img1(1).jpg" width="360" alt="banking app" />
+                    <img class="port-img" src="./images/img1.1.jpg" width="360" alt="banking app" />
                     <h3 class="port-subtitle">Banking App</h3>
                     <p class="port-text">App</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img2(1).jpg" width="360" alt="marketing" />
+                    <img class="port-img" src="./images/img2.1.jpg" width="360" alt="marketing" />
                     <h3 class="port-subtitle">Cashless Payment</h3>
                     <p class="port-text">Marketing</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img3(1).jpg" width="360" alt="app" />
+                    <img class="port-img" src="./images/img3.1.jpg" width="360" alt="app" />
                     <h3 class="port-subtitle">Meditation App</h3>
                     <p class="port-text">App</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img4(1).jpg" width="360" alt="taxi" />
+                    <img class="port-img" src="./images/img4.1.jpg" width="360" alt="taxi" />
                     <h3 class="port-subtitle">Taxi Service</h3>
                     <p class="port-text">Marketing</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img5(1).jpg" width="360" alt=" illustrations" />
+                    <img class="port-img" src="./images/img5.1.jpg" width="360" alt=" illustrations" />
                     <h3 class="port-subtitle">Screen Illustrations</h3>
                     <p class="port-text">Design</p>
                 </li>
                 <li class="port-item">
-                    <img class="port-img" src="./images/img6(1).jpg" width="360" alt="joy" />
+                    <img class="port-img" src="./images/img6.1.jpg" width="360" alt="joy" />
                     <h3 class="port-subtitle">Online Courses</h3>
                     <p class="port-text">Marketing</p>
                 </li>
