add initial files

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <a class="logo" href="/index.html">Web<span class="studio">Studio</span>
             </a>
             <ul class="nav">
-                <li><a class="nav-item" href="/index.html">Studio</a></li>
-                <li><a class="nav-item" href="/index.html">Portfolio</a></li>
-                <li><a class="nav-item" href="/index.html">Contacts</a></li>
+                <li><a class="nav-item" href="./index.html">Studio</a></li>
+                <li><a class="nav-item" href="">Portfolio</a></li>
+                <li><a class="nav-item" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
@@ -83,26 +83,26 @@
             <h2 class="our-team-title">Our Team</h2>
             <ul class="our-team-list">
                 <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo1(1).jpg" width="264" alt="photo Mark Guerrero" />
+                    <img class="our-team-img" src="./images/photo1.1.jpg" width="264" alt="photo Mark Guerrero" />
                     <h3 class="our-team-subtitle">Mark Guerrero</h3>
                     <p class="our-team-text">Product Designer</p>
                 </li>
 
                 <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo2(1).jpg" width="264" alt="photo Tom Ford" />
+                    <img class="our-team-img" src="./images/photo2.1.jpg" width="264" alt="photo Tom Ford" />
                     <h3 class="our-team-subtitle">Tom Ford</h3>
                     <p class="our-team-text">Frontend Developer</p>
                 </li>
 
                 <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo3(1).jpg" width="264" alt="photo Camilla Garcia" />
+                    <img class="our-team-img" src="./images/photo3.1.jpg" width="264" alt="photo Camilla Garcia" />
                     <h3 class="our-team-subtitle">Camilla Garcia</h3>
                     <p class="our-team-text">Marketing</p>
                     
                 </li>
 
                 <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo4(1).jpg" width="264" alt="photo Daniel Wilson" />
+                    <img class="our-team-img" src="./images/photo4.1.jpg" width="264" alt="photo Daniel Wilson" />
                     <h3 class="our-team-subtitle">Daniel Wilson</h3>
                     <p class="our-team-text">UI Designer</p>
                     
