--- a/index.html
+++ b/index.html
@@ -1,163 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-
+  <body>
     <!-- header -->
-    <header>
- 
-        <nav>
-            <a class="logo" href="/index.html">Web<span class="studio">Studio</span>
-            </a>
-            <ul class="nav">
-                <li><a class="nav-item" href="./index.html">Studio</a></li>
-                <li><a class="nav-item" href="">Portfolio</a></li>
-                <li><a class="nav-item" href="">Contacts</a></li>
-            </ul>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="nav">
+          <a class="logo" href="/index.html"
+            >Web<span class="studio">Studio</span>
+          </a>
+          <ul class="nav-list">
+            <li><a class="nav-item" href="./index.html">Studio</a></li>
+            <li><a class="nav-item" href="">Portfolio</a></li>
+            <li><a class="nav-item" href="">Contacts</a></li>
+          </ul>
         </nav>
         <address class="address">
-            <ul class="addr-list">
-                <li><a class="addr-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="addr-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+          <ul class="addr-list">
+            <li>
+              <a class="addr-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="addr-item" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
         </address>
+      </div>
     </header>
 
     <!-- main -->
     <main>
-        <!-- title -->
-        <section class="title">
-            <h1 class="title-text">Effective Solutions for Your Business</h1>
-            <button class="title-btn" type="button">Order Service</button>
-        </section>
+      <!-- title -->
+      <section class="title">
+        <div class="container">
+          <h1 class="title-text">Effective Solutions for Your Business</h1>
+          <div class="btn">
+          <button class="title-btn" type="button">Order Service</button>
+          </div>
+        </div>
+      </section>
 
-        <!-- advantages -->
-        <section class="adv">
-            <h2 class="adv-title">Advantages</h2>
-            <ul>
-                <li>
-                    <h3 class="adv-subtitle">Strategy</h3>
-                    <p class="adv-text">
-                        Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="adv-subtitle">Punctuality</h3>
-                    <p class="adv-text">
-                        Bring the key message to the brand's audience
-                        for the best price within the shortest possible time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="adv-subtitle">Diligence</h3>
-                    <p class="adv-text">
-                        Research and confirm brands that present the strongest
-                        digital growth opportunities and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="adv-subtitle">Technologies</h3>
-                    <p class="adv-text">
-                        Design practice focused on digital experiences.
-                        We bring forth a deep passion for problem-solving.
-                    </p>
-                </li>
-            </ul>
-        </section>
+      <!-- advantages -->
+      <section class="advantages">
+        <div class="container">
+          <h2 class="advantages-title">Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle">Strategy</h3>
+              <p class="advantages-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle">Punctuality</h3>
+              <p class="advantages-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle">Diligence</h3>
+              <p class="advantages-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle">Technologies</h3>
+              <p class="advantages-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <!-- our-team -->
-        <section class="our-team">
-            <h2 class="our-team-title">Our Team</h2>
-            <ul class="our-team-list">
-                <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo1.1.jpg" width="264" alt="photo Mark Guerrero" />
-                    <h3 class="our-team-subtitle">Mark Guerrero</h3>
-                    <p class="our-team-text">Product Designer</p>
-                </li>
+      <!-- our-team -->
+      <section class="our-team">
+        <div class="container">
+          <h2 class="our-team-title">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="our-team-item">
+              <img
+                class="our-team-img"
+                src="./images/photo1.1.jpg"
+                width="264"
+                alt="photo Mark Guerrero"
+              />
+              <h3 class="our-team-subtitle">Mark Guerrero</h3>
+              <p class="our-team-text">Product Designer</p>
+            </li>
 
-                <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo2.1.jpg" width="264" alt="photo Tom Ford" />
-                    <h3 class="our-team-subtitle">Tom Ford</h3>
-                    <p class="our-team-text">Frontend Developer</p>
-                </li>
+            <li class="our-team-item">
+              <img
+                class="our-team-img"
+                src="./images/photo2.1.jpg"
+                width="264"
+                alt="photo Tom Ford"
+              />
+              <h3 class="our-team-subtitle">Tom Ford</h3>
+              <p class="our-team-text">Frontend Developer</p>
+            </li>
 
-                <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo3.1.jpg" width="264" alt="photo Camilla Garcia" />
-                    <h3 class="our-team-subtitle">Camilla Garcia</h3>
-                    <p class="our-team-text">Marketing</p>
-                    
-                </li>
+            <li class="our-team-item">
+              <img
+                class="our-team-img"
+                src="./images/photo3.1.jpg"
+                width="264"
+                alt="photo Camilla Garcia"
+              />
+              <h3 class="our-team-subtitle">Camilla Garcia</h3>
+              <p class="our-team-text">Marketing</p>
+            </li>
 
-                <li class="our-team-item">
-                    <img class="our-team-img" src="./images/photo4.1.jpg" width="264" alt="photo Daniel Wilson" />
-                    <h3 class="our-team-subtitle">Daniel Wilson</h3>
-                    <p class="our-team-text">UI Designer</p>
-                    
-                </li>
-            </ul>
-        </section>
+            <li class="our-team-item">
+              <img
+                class="our-team-img"
+                src="./images/photo4.1.jpg"
+                width="264"
+                alt="photo Daniel Wilson"
+              />
+              <h3 class="our-team-subtitle">Daniel Wilson</h3>
+              <p class="our-team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <!-- our-portfolio -->
-        <section class="portfolio">
-            <h2 class="port-title">Our Portfolio</h2>
-            <ul class="port-list">
-                <li class="port-item">
-                    <img class="port-img" src="./images/img11.jpg" width="360" alt="banking app" />
-                    <h3 class="port-subtitle">Banking App</h3>
-                    <p class="port-text">App</p>
-                </li>
-                <li class="port-item">
-                    <img class="port-img" src="./images/img21.jpg" width="360" alt="marketing" />
-                    <h3 class="port-subtitle">Cashless Payment</h3>
-                    <p class="port-text">Marketing</p>
-                </li>
-                <li class="port-item">
-                    <img class="port-img" src="./images/img31.jpg" width="360" alt="app" />
-                    <h3 class="port-subtitle">Meditation App</h3>
-                    <p class="port-text">App</p>
-                </li>
-                <li class="port-item">
-                    <img class="port-img" src="./images/img41.jpg" width="360" alt="taxi" />
-                    <h3 class="port-subtitle">Taxi Service</h3>
-                    <p class="port-text">Marketing</p>
-                </li>
-                <li class="port-item">
-                    <img class="port-img" src="./images/img51.jpg" width="360" alt=" illustrations" />
-                    <h3 class="port-subtitle">Screen Illustrations</h3>
-                    <p class="port-text">Design</p>
-                </li>
-                <li class="port-item">
-                    <img class="port-img" src="./images/img61.jpg" width="360" alt="joy" />
-                    <h3 class="port-subtitle">Online Courses</h3>
-                    <p class="port-text">Marketing</p>
-                </li>
-            </ul>
-        </section>
+      <!-- our-portfolio -->
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="port-title">Our Portfolio</h2>
+          <ul class="port-list">
+            <li class="port-item">
+              <img
+                class="port-img"
+                src="./images/img11.jpg"
+                width="360"
+                alt="banking app"
+              />
+              <h3 class="port-subtitle">Banking App</h3>
+              <p class="port-text">App</p>
+            </li>
+            <li class="port-item">
+              <img
+                class="port-img"
+                src="./images/img21.jpg"
+                width="360"
+                alt="marketing"
+              />
+              <h3 class="port-subtitle">Cashless Payment</h3>
+              <p class="port-text">Marketing</p>
+            </li>
+            <li class="port-item">
+              <img
+                class="port-img"
+                src="./images/img31.jpg"
+                width="360"
+                alt="app"
+              />
+              <h3 class="port-subtitle">Meditation App</h3>
+              <p class="port-text">App</p>
+            </li>
+            <li class="port-item">
+              <img
+                class="port-img"
+                src="./images/img41.jpg"
+                width="360"
+                alt="taxi"
+              />
+              <h3 class="port-subtitle">Taxi Service</h3>
+              <p class="port-text">Marketing</p>
+            </li>
+            <li class="port-item">
+              <img
+                class="port-img"
+                src="./images/img51.jpg"
+                width="360"
+                alt=" illustrations"
+              />
+              <h3 class="port-subtitle">Screen Illustrations</h3>
+              <p class="port-text">Design</p>
+            </li>
+            <li class="port-item">
+              <img
+                class="port-img"
+                src="./images/img61.jpg"
+                width="360"
+                alt="joy"
+              />
+              <h3 class="port-subtitle">Online Courses</h3>
+              <p class="port-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
     <footer class="footer">
-        <a class="logo" href="./index.html">Web<span class="footer-studio">Studio</span>
+      <div class="container footer-container">
+        <a class="logo" href="./index.html"
+          >Web<span class="footer-studio">Studio</span>
         </a>
         <p class="footer-text">
-            Increase the flow of customers and 
-            sales for your business with digital 
-            marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
