--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Studio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
-      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -57,9 +57,7 @@
       <section class="title">
         <div class="container">
           <h1 class="title-text">Effective Solutions for Your Business</h1>
-          <div class="btn">
           <button class="title-btn" type="button">Order Service</button>
-          </div>
         </div>
       </section>
 
@@ -112,8 +110,10 @@
                 width="264"
                 alt="photo Mark Guerrero"
               />
-              <h3 class="our-team-subtitle">Mark Guerrero</h3>
-              <p class="our-team-text">Product Designer</p>
+              <div class="our-team-aside">
+                <h3 class="our-team-subtitle">Mark Guerrero</h3>
+                <p class="our-team-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="our-team-item">
@@ -123,8 +123,10 @@
                 width="264"
                 alt="photo Tom Ford"
               />
-              <h3 class="our-team-subtitle">Tom Ford</h3>
-              <p class="our-team-text">Frontend Developer</p>
+              <div class="our-team-aside">
+                <h3 class="our-team-subtitle">Tom Ford</h3>
+                <p class="our-team-text">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="our-team-item">
@@ -134,8 +136,10 @@
                 width="264"
                 alt="photo Camilla Garcia"
               />
-              <h3 class="our-team-subtitle">Camilla Garcia</h3>
-              <p class="our-team-text">Marketing</p>
+              <div class="our-team-aside">
+                <h3 class="our-team-subtitle">Camilla Garcia</h3>
+                <p class="our-team-text">Marketing</p>
+              </div>
             </li>
 
             <li class="our-team-item">
@@ -145,8 +149,10 @@
                 width="264"
                 alt="photo Daniel Wilson"
               />
-              <h3 class="our-team-subtitle">Daniel Wilson</h3>
-              <p class="our-team-text">UI Designer</p>
+              <div class="our-team-aside">
+                <h3 class="our-team-subtitle">Daniel Wilson</h3>
+                <p class="our-team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -164,8 +170,10 @@
                 width="360"
                 alt="banking app"
               />
-              <h3 class="port-subtitle">Banking App</h3>
-              <p class="port-text">App</p>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Banking App</h3>
+                <p class="port-text">App</p>
+              </div>
             </li>
             <li class="port-item">
               <img
@@ -174,8 +182,10 @@
                 width="360"
                 alt="marketing"
               />
-              <h3 class="port-subtitle">Cashless Payment</h3>
-              <p class="port-text">Marketing</p>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Cashless Payment</h3>
+                <p class="port-text">Marketing</p>
+              </div>
             </li>
             <li class="port-item">
               <img
@@ -184,8 +194,10 @@
                 width="360"
                 alt="app"
               />
-              <h3 class="port-subtitle">Meditation App</h3>
-              <p class="port-text">App</p>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Meditation App</h3>
+                <p class="port-text">App</p>
+              </div>
             </li>
             <li class="port-item">
               <img
@@ -194,8 +206,10 @@
                 width="360"
                 alt="taxi"
               />
-              <h3 class="port-subtitle">Taxi Service</h3>
-              <p class="port-text">Marketing</p>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Taxi Service</h3>
+                <p class="port-text">Marketing</p>
+              </div>
             </li>
             <li class="port-item">
               <img
@@ -204,8 +218,10 @@
                 width="360"
                 alt=" illustrations"
               />
-              <h3 class="port-subtitle">Screen Illustrations</h3>
-              <p class="port-text">Design</p>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Screen Illustrations</h3>
+                <p class="port-text">Design</p>
+              </div>
             </li>
             <li class="port-item">
               <img
@@ -214,8 +230,10 @@
                 width="360"
                 alt="joy"
               />
-              <h3 class="port-subtitle">Online Courses</h3>
-              <p class="port-text">Marketing</p>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Online Courses</h3>
+                <p class="port-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -225,7 +243,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo" href="./index.html"
+        <a class="logo footer-logo" href="./index.html"
           >Web<span class="footer-studio">Studio</span>
         </a>
         <p class="footer-text">
