--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- advantages -->
       <section class="advantages">
         <div class="container">
-          <h2 class="advantages-title">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-subtitle">Strategy</h3>
