add initial files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             >Web<span class="studio">Studio</span>
           </a>
           <ul class="nav-list">
-            <li><a class="nav-item" href="./index.html">Studio</a></li>
+            <li><a class="nav-item current" href="./index.html">Studio</a></li>
             <li><a class="nav-item" href="">Portfolio</a></li>
             <li><a class="nav-item" href="">Contacts</a></li>
           </ul>
@@ -55,7 +55,7 @@
     <main>
       <!-- title -->
       <section class="title">
-        <div class="container">
+        <div class="container title-container">
           <h1 class="title-text">Effective Solutions for Your Business</h1>
           <button class="title-btn" type="button">Order Service</button>
         </div>
@@ -67,6 +67,11 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="advantages-icon">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-subtitle">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-icon">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-subtitle">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-icon">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-subtitle">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-icon">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-subtitle">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -114,6 +134,28 @@
                 <h3 class="our-team-subtitle">Mark Guerrero</h3>
                 <p class="our-team-text">Product Designer</p>
               </div>
+              <ul class="our-team-list-icon">
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
 
             <li class="our-team-item">
@@ -127,6 +169,28 @@
                 <h3 class="our-team-subtitle">Tom Ford</h3>
                 <p class="our-team-text">Frontend Developer</p>
               </div>
+              <ul class="our-team-list-icon">
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
 
             <li class="our-team-item">
@@ -140,6 +204,28 @@
                 <h3 class="our-team-subtitle">Camilla Garcia</h3>
                 <p class="our-team-text">Marketing</p>
               </div>
+              <ul class="our-team-list-icon">
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
 
             <li class="our-team-item">
@@ -153,6 +239,28 @@
                 <h3 class="our-team-subtitle">Daniel Wilson</h3>
                 <p class="our-team-text">UI Designer</p>
               </div>
+              <ul class="our-team-list-icon">
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="our-team-item-icon">
+                  <svg class="our-team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -176,16 +284,26 @@
               </div>
             </li>
             <li class="port-item">
-              <img
-                class="port-img"
-                src="./images/img21.jpg"
-                width="360"
-                alt="marketing"
-              />
-              <div class="port-aside">
-                <h3 class="port-subtitle">Cashless Payment</h3>
-                <p class="port-text">Marketing</p>
-              </div>
+                <div class="port-item-mark">
+                  <img
+                    class="port-img"
+                    src="./images/img21.jpg"
+                    width="360"
+                    alt="marketing"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
+                <div class="port-aside">
+                  <h3 class="port-subtitle">Cashless Payment</h3>
+                  <p class="port-text">Marketing</p>
+                </div>
             </li>
             <li class="port-item">
               <img
@@ -243,13 +361,40 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="footer-studio">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="footer-studio">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-media">
+          <h4 class="footer-title">Social media</h4>
+          <ul class="footer-list-icon">
+            <li class="footer-item-icon">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-item-icon">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-item-icon">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-item-icon">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
