add initial files

--- a/index.html
+++ b/index.html
@@ -133,29 +133,37 @@
               <div class="our-team-aside">
                 <h3 class="our-team-subtitle">Mark Guerrero</h3>
                 <p class="our-team-text">Product Designer</p>
+                <ul class="our-team-list-icon">
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="our-team-list-icon">
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </li>
-              </ul>
             </li>
 
             <li class="our-team-item">
@@ -168,29 +176,37 @@
               <div class="our-team-aside">
                 <h3 class="our-team-subtitle">Tom Ford</h3>
                 <p class="our-team-text">Frontend Developer</p>
+                <ul class="our-team-list-icon">
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="our-team-list-icon">
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </li>
-              </ul>
             </li>
 
             <li class="our-team-item">
@@ -203,29 +219,37 @@
               <div class="our-team-aside">
                 <h3 class="our-team-subtitle">Camilla Garcia</h3>
                 <p class="our-team-text">Marketing</p>
+                <ul class="our-team-list-icon">
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="our-team-list-icon">
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </li>
-              </ul>
             </li>
 
             <li class="our-team-item">
@@ -238,29 +262,37 @@
               <div class="our-team-aside">
                 <h3 class="our-team-subtitle">Daniel Wilson</h3>
                 <p class="our-team-text">UI Designer</p>
+                <ul class="our-team-list-icon">
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-item-icon">
+                    <a href="" class="link-icon">
+                      <svg class="our-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="our-team-list-icon">
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </li>
-                <li class="our-team-item-icon">
-                  <svg class="our-team-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
@@ -271,83 +303,121 @@
         <div class="container">
           <h2 class="port-title">Our Portfolio</h2>
           <ul class="port-list">
+
             <li class="port-item">
+               <div class="port-item-img">
               <img
                 class="port-img"
                 src="./images/img11.jpg"
                 width="360"
                 alt="banking app"
               />
+              <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+              </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Banking App</h3>
                 <p class="port-text">App</p>
               </div>
             </li>
-            <li class="port-item">
-                <div class="port-item-mark">
-                  <img
-                    class="port-img"
-                    src="./images/img21.jpg"
-                    width="360"
-                    alt="marketing"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
 
-                <div class="port-aside">
-                  <h3 class="port-subtitle">Cashless Payment</h3>
-                  <p class="port-text">Marketing</p>
-                </div>
-            </li>
             <li class="port-item">
+              <div class="port-item-img">
+                <img
+                  class="port-img"
+                  src="./images/img21.jpg"
+                  width="360"
+                  alt="marketing"
+                />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+              </div>
+              <div class="port-aside">
+                <h3 class="port-subtitle">Cashless Payment</h3>
+                <p class="port-text">Marketing</p>
+              </div>
+            </li>
+
+            <li class="port-item">
+               <div class="port-item-img">
               <img
                 class="port-img"
                 src="./images/img31.jpg"
                 width="360"
                 alt="app"
               />
+              <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+              </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Meditation App</h3>
                 <p class="port-text">App</p>
               </div>
             </li>
+
             <li class="port-item">
+               <div class="port-item-img">
               <img
                 class="port-img"
                 src="./images/img41.jpg"
                 width="360"
                 alt="taxi"
               />
+              <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+              </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Taxi Service</h3>
                 <p class="port-text">Marketing</p>
               </div>
             </li>
+
             <li class="port-item">
+               <div class="port-item-img">
               <img
                 class="port-img"
                 src="./images/img51.jpg"
                 width="360"
                 alt=" illustrations"
               />
+              <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+              </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Screen Illustrations</h3>
                 <p class="port-text">Design</p>
               </div>
             </li>
+
             <li class="port-item">
+               <div class="port-item-img">
               <img
                 class="port-img"
                 src="./images/img61.jpg"
                 width="360"
                 alt="joy"
               />
+              <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+              </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Online Courses</h3>
                 <p class="port-text">Marketing</p>
@@ -361,7 +431,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-logo-text">
           <a class="logo footer-logo" href="./index.html"
             >Web<span class="footer-studio">Studio</span>
           </a>
@@ -371,27 +441,35 @@
           </p>
         </div>
         <div class="footer-media">
-          <h4 class="footer-title">Social media</h4>
+          <p class="footer-aside">Social media</p>
           <ul class="footer-list-icon">
             <li class="footer-item-icon">
+              <a class="footer-link" href="">
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
+              </a>
             </li>
             <li class="footer-item-icon">
+               <a class="footer-link" href="">
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
+              </a>
             </li>
             <li class="footer-item-icon">
+               <a class="footer-link" href="">
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
+              </a>
             </li>
             <li class="footer-item-icon">
+               <a class="footer-link" href="">
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
