--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
       <!-- title -->
       <section class="title">
-        <div class="container title-container">
+        <div class="container">
           <h1 class="title-text">Effective Solutions for Your Business</h1>
           <button class="title-btn" type="button">Order Service</button>
         </div>
