--- a/index.html
+++ b/index.html
@@ -303,20 +303,19 @@
         <div class="container">
           <h2 class="port-title">Our Portfolio</h2>
           <ul class="port-list">
-
             <li class="port-item">
-               <div class="port-item-img">
-              <img
-                class="port-img"
-                src="./images/img11.jpg"
-                width="360"
-                alt="banking app"
-              />
-              <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+              <div class="port-item-img">
+                <img
+                  class="port-img"
+                  src="./images/img11.jpg"
+                  width="360"
+                  alt="banking app"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Banking App</h3>
@@ -332,11 +331,11 @@
                   width="360"
                   alt="marketing"
                 />
-                  <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Cashless Payment</h3>
@@ -345,18 +344,18 @@
             </li>
 
             <li class="port-item">
-               <div class="port-item-img">
-              <img
-                class="port-img"
-                src="./images/img31.jpg"
-                width="360"
-                alt="app"
-              />
-              <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+              <div class="port-item-img">
+                <img
+                  class="port-img"
+                  src="./images/img31.jpg"
+                  width="360"
+                  alt="app"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Meditation App</h3>
@@ -365,18 +364,18 @@
             </li>
 
             <li class="port-item">
-               <div class="port-item-img">
-              <img
-                class="port-img"
-                src="./images/img41.jpg"
-                width="360"
-                alt="taxi"
-              />
-              <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+              <div class="port-item-img">
+                <img
+                  class="port-img"
+                  src="./images/img41.jpg"
+                  width="360"
+                  alt="taxi"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Taxi Service</h3>
@@ -385,18 +384,18 @@
             </li>
 
             <li class="port-item">
-               <div class="port-item-img">
-              <img
-                class="port-img"
-                src="./images/img51.jpg"
-                width="360"
-                alt=" illustrations"
-              />
-              <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+              <div class="port-item-img">
+                <img
+                  class="port-img"
+                  src="./images/img51.jpg"
+                  width="360"
+                  alt=" illustrations"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Screen Illustrations</h3>
@@ -405,18 +404,18 @@
             </li>
 
             <li class="port-item">
-               <div class="port-item-img">
-              <img
-                class="port-img"
-                src="./images/img61.jpg"
-                width="360"
-                alt="joy"
-              />
-              <p class="overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+              <div class="port-item-img">
+                <img
+                  class="port-img"
+                  src="./images/img61.jpg"
+                  width="360"
+                  alt="joy"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="port-aside">
                 <h3 class="port-subtitle">Online Courses</h3>
@@ -445,35 +444,128 @@
           <ul class="footer-list-icon">
             <li class="footer-item-icon">
               <a class="footer-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-item-icon">
-               <a class="footer-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
+              <a class="footer-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-item-icon">
-               <a class="footer-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
+              <a class="footer-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-item-icon">
-               <a class="footer-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <a class="footer-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-subs-text">Subscribe</p>
+          <form class="form">
+            <label class="label-email">
+              <input
+                class="email"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-button" type="submit">
+              Subscribe
+              <svg class="footer-button-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <!-- modal -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-box">
+            <label for="username" class="modal-lable">Name</label>
+            <div class="modal-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="username"
+                id="username"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-box">
+            <label for="contact-tel" class="modal-lable">Phone</label>
+            <div class="modal-wrap">
+              <input
+                class="modal-input"
+                type="tel"
+                name="contact-tel"
+                id="contact-tel"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-box">
+            <label for="email" class="modal-lable">Email</label>
+            <div class="modal-wrap">
+              <input class="modal-input" type="email" name="email" id="email" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <label for="comment" class="modal-lable">Comment</label>
+          <div class="modal-wrap">
+            <textarea
+              id="comment"
+              class="modal-comment"
+              type="text"
+              name="comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input type="checkbox" 
+              name="policy" 
+              id="policy" 
+              class="modal-check visually-hidden" 
+              value="true"/>
+              <label for="policy" class="check-text"><span>
+                <svg class="check-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+              </span>I accept the terms and conditions of the Privacy Policy</label>
+          </div>
+          <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
