--- a/index.html
+++ b/index.html
@@ -546,22 +546,25 @@
             <textarea
               id="comment"
               class="modal-comment"
-              type="text"
               name="comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="modal-field">
-            <input type="checkbox" 
-              name="policy" 
-              id="policy" 
-              class="modal-check visually-hidden" 
-              value="true"/>
-              <label for="policy" class="check-text"><span>
+            <input
+              type="checkbox"
+              name="policy"
+              id="policy"
+              class="modal-check visually-hidden"
+              value="true"
+            />
+            <label for="policy" class="check-text"
+              ><span>
                 <svg class="check-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-vector"></use>
-              </svg>
-              </span>I accept the terms and conditions of the Privacy Policy</label>
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg> </span
+              >I accept the terms and conditions of the Privacy Policy</label
+            >
           </div>
           <button class="form-button" type="submit">Send</button>
         </form>
