--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </label>
             <button class="footer-button" type="submit">
               Subscribe
-              <svg class="footer-button-icon" width="24" height="20">
+              <svg class="footer-button-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
@@ -505,13 +505,13 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-box">
-            <label for="username" class="modal-lable">Name</label>
+            <label for="user-name" class="modal-lable">Name</label>
             <div class="modal-wrap">
               <input
                 class="modal-input"
                 type="text"
-                name="username"
-                id="username"
+                name="user-name"
+                id="user-name"
               />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
@@ -541,30 +541,34 @@
               </svg>
             </div>
           </div>
-          <label for="comment" class="modal-lable">Comment</label>
-          <div class="modal-wrap">
-            <textarea
-              id="comment"
-              class="modal-comment"
-              name="comment"
-              placeholder="Text input"
-            ></textarea>
+          <div class="modal-box-comment">
+            <label for="user-comment" class="modal-lable">Comment</label>
+            <div class="modal-wrap">
+              <textarea
+                id="user-comment"
+                class="modal-comment"
+                name="user-comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
           </div>
           <div class="modal-field">
             <input
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               class="modal-check visually-hidden"
               value="true"
             />
-            <label for="policy" class="check-text"
-              ><span>
+            <label for="user-privacy" class="check-text">
+            <span class="box-check-icon">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
-                </svg> </span
-              >I accept the terms and conditions of the Privacy Policy</label
-            >
+                </svg> 
+              </span>
+              I accept the terms and conditions of the<a href="" class="check-link">
+              Privacy Policy</a>
+              </label>
           </div>
           <button class="form-button" type="submit">Send</button>
         </form>
