--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-box">
-            <label for="user-name" class="modal-lable">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="modal-wrap">
               <input
                 class="modal-input"
@@ -519,7 +519,7 @@
             </div>
           </div>
           <div class="modal-box">
-            <label for="contact-tel" class="modal-lable">Phone</label>
+            <label for="contact-tel" class="modal-label">Phone</label>
             <div class="modal-wrap">
               <input
                 class="modal-input"
@@ -533,7 +533,7 @@
             </div>
           </div>
           <div class="modal-box">
-            <label for="email" class="modal-lable">Email</label>
+            <label for="email" class="modal-label">Email</label>
             <div class="modal-wrap">
               <input class="modal-input" type="email" name="email" id="email" />
               <svg class="modal-icon" width="18" height="24">
@@ -542,15 +542,13 @@
             </div>
           </div>
           <div class="modal-box-comment">
-            <label for="user-comment" class="modal-lable">Comment</label>
-            <div class="modal-wrap">
+            <label for="user-comment" class="modal-label">Comment</label>
               <textarea
                 id="user-comment"
                 class="modal-comment"
                 name="user-comment"
                 placeholder="Text input"
               ></textarea>
-            </div>
           </div>
           <div class="modal-field">
             <input
