add initial files

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <!-- menu -->
-    <div class="backdrop">
+    <div class="backdrop menu-backdrop is-open">
       <div class="container menu">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -722,7 +722,7 @@
     </footer>
 
     <!-- modal -->
-    <div class="backdrop modal-backdrop">
+    <div class="backdrop modal-backdrop ">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
